Fix text wrapping in child details on mobile (#45)

--- a/public/styles/site/_page-waiting-child-profiles.scss
+++ b/public/styles/site/_page-waiting-child-profiles.scss
@@ -131,9 +131,12 @@
 
 .profile__profile-picture {
 	width: 200px;
-    float: right;
-    margin-left: 1em;
-    margin-bottom: 1em;
+
+	@media all and ( min-width: 655px ) {
+		float: right;
+		margin-left: 1em;
+		margin-bottom: 1em;
+	}
 }
 
 .profile__basic-info {
@@ -168,7 +171,9 @@
 
 .detailed-child-info__introduction,
 .detailed-child-info__part-1 {
-	margin-right: 15em;
+	@media all and ( min-width: 655px ) {
+		margin-right: 15em;
+	}
 }
 
 .profile-details__video-container,
